@@ -75,6 +75,7 @@ namespace kt
 			
 			kcfg_networkInterface->addItem(icon,iface.name());
 		}
+		
 		kcfg_networkInterface->setCurrentIndex(Settings::networkInterface());
 	}
 
